--- a/app/src/main/res/drawable/bg_btn.xml
+++ b/app/src/main/res/drawable/bg_btn.xml
@@ -3,9 +3,13 @@
     android:shape="rectangle"
     >
 
-    <solid android:color="@color/color_default"
-    <stroke android:width="1dp" android:color="@color/color_default"/>
-    <corners android:radius="80dp"></corners>
+    <solid android:color="@color/color_default" />
+
+    <stroke
+        android:width="1dp"
+        android:color="@color/color_default" />
+
+    <corners android:radius="80dp" />
 
 
 </shape>
