--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -53,9 +53,10 @@
                 android:textColor="@color/color_default"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView">
+                app:layout_constraintTop_toBottomOf="@+id/textView"/>
 
             <EditText
+                android:id="@+id/edit_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_edit_around"
@@ -75,19 +76,20 @@
                 android:textColor="@color/color_default"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView">
+                app:layout_constraintTop_toBottomOf="@+id/textView"/>
 
             <EditText
+                android:id="@+id/edit_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bg_edit_around"
-                android:padding="14dp"
                 android:layout_marginTop="4dp"
-                android:drawablePadding="8dp"
-                android:hint="Digite seu e-mail"
-                android:textColorHint="@color/color_hint"
+                android:background="@drawable/bg_edit_around"
                 android:drawableStart="@drawable/ic_email"
-                android:drawableTint="@color/color_default" />
+                android:drawablePadding="8dp"
+                android:drawableTint="@color/color_default"
+                android:hint="Digite seu e-mail"
+                android:padding="14dp"
+                android:textColorHint="@color/color_hint" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -97,9 +99,10 @@
                 android:textColor="@color/color_default"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView">
+                app:layout_constraintTop_toBottomOf="@+id/textView"/>
 
             <EditText
+                android:id="@+id/edit_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_edit_around"
@@ -119,9 +122,10 @@
                 android:textColor="@color/color_default"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView">
+                app:layout_constraintTop_toBottomOf="@+id/textView"/>
 
             <EditText
+                android:id="@+id/edit_senha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_edit_around"
@@ -141,9 +145,10 @@
                 android:textColor="@color/color_default"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView">
+                app:layout_constraintTop_toBottomOf="@+id/textView"/>
 
             <EditText
+                android:id="@+id/edit_confirm_senha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_edit_around"
@@ -157,12 +162,12 @@
 
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/materialButton"
+                android:id="@+id/btn_register"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_btn"
                 android:text="Criar Conta"
-                android:layout_margin="24dp"
+                android:layout_marginTop="24dp"
                 app:backgroundTint="@color/color_default"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -178,7 +183,7 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/materialButton" />
+                app:layout_constraintTop_toBottomOf="@+id/btn_send_Link" />
 
 
         </LinearLayout>
