adjust visibility progressbar and created extensions toolbar

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -175,6 +175,8 @@
 
             <ProgressBar
                 android:id="@+id/progressBar"
+                android:visibility="invisible"
+                tools:visibility="visible"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:indeterminateTint="@color/color_default"
