created theme for edittext

--- a/app/src/main/res/layout/fragment_recover.xml
+++ b/app/src/main/res/layout/fragment_recover.xml
@@ -65,14 +65,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="24dp"
-            android:background="@drawable/bg_edit_around"
             android:drawableStart="@drawable/ic_email"
-            android:drawablePadding="8dp"
+            style="@style/Theme.EditText"
             android:layout_marginTop="4dp"
-            android:drawableTint="@color/color_default"
             android:hint="Digite seu e-mail"
-            android:padding="14dp"
-            android:textColorHint="@color/color_hint"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
