--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,4 +7,14 @@
     </style>
 
     <style name="Theme.DigitalBank" parent="Base.Theme.DigitalBank" />
+    
+    <style name="Theme.EditText" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:background">@drawable/bg_edit_around</item>
+        <item name="android:drawablePadding">8dp</item>
+        <item name="android:padding">14dp</item>
+        <item name="android:textColorHint">@color/color_hint</item>
+        <item name="android:drawableTint">@color/color_default</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/color_default</item>
+    </style>
 </resources>
