--- a/app/src/main/res/layout/fragment_recover.xml
+++ b/app/src/main/res/layout/fragment_recover.xml
@@ -65,6 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="24dp"
+            android:inputType="textEmailAddress"
             android:drawableStart="@drawable/ic_email"
             style="@style/Theme.EditText"
             android:layout_marginTop="4dp"
