--- a/app/src/main/res/layout/fragment_recover.xml
+++ b/app/src/main/res/layout/fragment_recover.xml
@@ -43,7 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="24dp"
-            android:text="Digite seu e-mail do cadastro para enviarmos um link para redefinição de senha"
+            android:text="@string/text_topo_RecoverFragment"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +54,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="24dp"
-            android:text="E-mail"
+            android:text="@string/e_mail_text_RecoverFragment"
             android:textColor="@color/color_default"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +69,7 @@
             android:drawableStart="@drawable/ic_email"
             style="@style/Theme.EditText"
             android:layout_marginTop="4dp"
-            android:hint="Digite seu e-mail"
+            android:hint="@string/email_RecoverFragment"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -79,7 +79,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_btn"
-            android:text="Enviar link"
+            android:text="@string/btn_enviarLink_RecoverFragment"
             android:layout_margin="24dp"
             app:backgroundTint="@color/color_default"
             app:layout_constraintEnd_toEndOf="parent"
