--- a/app/src/main/res/drawable/bg_round.xml
+++ b/app/src/main/res/drawable/bg_round.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/white"
-    <size android:width="32dp" android:height="32dp"
+    <solid android:color="@color/white"></solid>
+    <size android:width="32dp" android:height="32dp"></size>
 </shape>
