--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -125,6 +125,7 @@
 
 
             <com.google.android.material.card.MaterialCardView
+                android:id="@+id/card_deposit"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_margin="8dp"
