feature: saving deposit in firebaseDataBase

--- a/app/src/main/res/layout/fragment_deposit_form.xml
+++ b/app/src/main/res/layout/fragment_deposit_form.xml
@@ -78,11 +78,12 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
             <EditText
+                android:id="@+id/edit_amount"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                android:backgroundTint="@color/white"
                 android:layout_margin="16dp"
+                android:backgroundTint="@color/white"
+                android:inputType="numberDecimal"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="24sp"
@@ -90,8 +91,20 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:indeterminateTint="@color/white"
+                android:visibility="invisible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edit_amount"
+                tools:visibility="visible" />
+
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_login"
+                android:id="@+id/btn_continue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
@@ -108,7 +121,6 @@
                 android:layout_height="wrap_content"
                 tools:layout_editor_absoluteX="1dp"
                 tools:layout_editor_absoluteY="250dp" />
-
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
