--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,10 @@
     <color name="white">#FFFFFFFF</color>
     <color name="color_default">#31A6F6</color>
     <color name="color_hint">#84BDE3</color>
+
     <color name="color_succes">#4CAF50</color>
     <color name="color_error">#AE1515</color>
+
+    <color name="color_cashIn">#4CAF50</color>
+    <color name="color_cashOut">#AE1515</color>
 </resources>
