--- a/app/src/main/res/layout/fragment_deposit_receipt.xml
+++ b/app/src/main/res/layout/fragment_deposit_receipt.xml
@@ -50,8 +50,9 @@
             android:textColor="@color/color_succes"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
-            tools:layout_editor_absoluteX="102dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
 
         <TextView
             android:id="@+id/textView8"
