--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="color_default">#31A6F6</color>
     <color name="color_hint">#84BDE3</color>
 
+    <color name="color_hint_disable">#A1C7E1</color>
+
     <color name="color_succes">#4CAF50</color>
     <color name="color_error">#AE1515</color>
 
