--- a/app/src/main/res/layout/fragment_rechard_receipt.xml
+++ b/app/src/main/res/layout/fragment_rechard_receipt.xml
@@ -30,7 +30,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:text="@string/title_toolbar"
+                    android:text="@string/title_toolbar_recarga"
                     android:textColor="@color/color_default" />
 
             </androidx.appcompat.widget.Toolbar>
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="24dp"
-            android:text="@string/title_comprovante"
+            android:text="@string/title_comprovante_recarga"
             android:textAlignment="center"
             android:textColor="@color/color_succes"
             android:textSize="24sp"
@@ -57,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/subtitle_comprovante"
+            android:text="@string/subtitle_comprovante_recarga"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView7" />
@@ -67,13 +67,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/code_transaction"
+            android:text="@string/code_transaction_recarga"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
         <TextView
-            android:id="@+id/text_code_transaction"
+            android:id="@+id/text_code_transaction_recarga"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="-mDASHiASASDALaakygja"
@@ -92,7 +92,7 @@
             android:background="?actionBarDivider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_code_transaction" />
+            app:layout_constraintTop_toBottomOf="@+id/text_code_transaction_recarga" />
 
         <TextView
             android:id="@+id/textView11"
@@ -100,7 +100,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginStart="16dp"
-            android:text="@string/date_transaction"
+            android:text="@string/date_transaction_recarga"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view2" />
 
@@ -110,12 +110,22 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:text="@string/amont_transaction"
+            android:text="@string/amont_transaction_recarga"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
         <TextView
-            android:id="@+id/text_date_transaction"
+            android:id="@+id/textView13"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/number_recarga"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView12" />
+
+        <TextView
+            android:id="@+id/text_date_transaction_recarga"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
@@ -125,7 +135,7 @@
             app:layout_constraintTop_toBottomOf="@+id/view2" />
 
         <TextView
-            android:id="@+id/text_amount_transaction"
+            android:id="@+id/text_amount_transaction_recarga"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -134,8 +144,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
+        <TextView
+            android:id="@+id/text_number_recarga"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_amount_transaction_recarga"
+            tools:text="(55) 6 6666-6666" />
+
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_continuar"
+            android:id="@+id/btn_continuar_recarga"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
